# omnirad

./: .dockerignore  .gitignore  .npmignore  Dockerfile  LangGraph-migration.md  README.md  dicom-support.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  middleware.ts  migrate_manual.js  migrate_segmentation.js  next.config.ts  openapi.json  package-lock.json  package.json  proxy.ts  radialogy_Copilot- Plan-code.md  radialogy_Copilot- Plan.md  tsconfig.json
.github/workflows/: ci.yml  release.yml
ai_service/: Dockerfile  main.py  pyproject.toml
ai_service/agent/: annotation_formatter.py  copilot_tools.py  copilot_workflow.py  parsers.py  segmentation_tools.py  workflow.py
ai_service/models/: __init__.py  image_preprocessor.py  medsam3_service.py
app/: layout.tsx  page.tsx
app/copilot/: page.tsx
app/history/: page.tsx
app/login/: page.tsx
app/pacs/: page.tsx
app/patients/: page.tsx
app/profile/: page.tsx
app/reports/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
components/admin/: AuditLogTable.tsx
components/copilot/: ActivityIndicator.tsx  ChatHistoryPanel.tsx  ChatMessage.tsx  ClickableReference.tsx  CopilotCornerstoneViewer.tsx  CopilotPanel.tsx  FindingsList.tsx  ViewerPanel.tsx  (+1 more)
db/: index.ts  schema.ts
lib/: api.ts  auth.ts  dicomImageExtractor.ts  dicomMetadataParser.ts  fhir.ts  patients.ts  pdfHelper.ts  reportHtmlGenerator.ts  supabase.ts
scripts/: migrate_ai_tables.js  test-compliance.ts
supabase/: patients-migration.sql  schema.sql
types/: copilot-viewer.ts  copilot.ts  fhir.ts  index.ts  pacs.ts
(+95 files in other folders)
